# AgentKit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  prompt.txt  shard.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  secret-scan.yml
config/: test_mcp_servers2.json
docs/: DEVELOPERS_GUIDE.md  INTEGRATION_GUIDE.md  USER_GUIDE.md
scripts/: e2e_test.sh  start_mcp_server.sh
scripts/mcp_test_server/: mcp_server.py  pyproject.toml
spec/: cli_spec.cr  config_spec.cr  spec_helper.cr  spec_runner_spec.cr
spec/agent/: agent_spec.cr  events_spec.cr  message_history_spec.cr  tool_registry_spec.cr
spec/mcp/: client_spec.cr  manager_spec.cr  sse_parser_spec.cr  stdio_supervisor_spec.cr  stdio_transport_spec.cr  transport_spec.cr
spec/mcp_integration/: agent_integration_spec.cr  mcp_integration_spec.cr  stdio_integration_spec.cr
spec/openai/: client_spec.cr  integration_spec.cr  types_spec.cr
src/: agent_kit.cr  logger.cr  main.cr
src/agent_kit/: agent_loop.cr  config.cr  events.cr  message_history.cr  tool_registry.cr
src/agent_kit/mcp_client/: client.cr  manager.cr  sse_parser.cr  stdio_supervisor.cr  stdio_transport.cr  transport.cr  types.cr
src/agent_kit/openai_api/: client.cr  types.cr
src/agentish/: config_loader.cr
