[project]
name = "mcp-test-server"
version = "0.1.0"
description = "Simple MCP Server for testing Crystal Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0,<0.129.0",
    "uvicorn[standard]>=0.38.0,<1.0.0",
    "mcp>=1.25.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
